--- a/src/i18n/en/index.json
+++ b/src/i18n/en/index.json
@@ -116,8 +116,9 @@
 
     "checkedBag": "Checked baggage",
     "carryOnBag": "Carry-on baggage",
-    "backpacks":"Backpacks"
+    "backpacks":"Backpacks",
 
-
+    "returnOn": "Activate Return",
+    "returnOff": "Disable Return"
 
 }
